build: update env

--- a/config/.env
+++ b/config/.env
@@ -1,8 +1,8 @@
-DATABASE_URL=localhost
-PGDATABASE=tani-hub
-PGHOST=localhost
-PGPASSWORD=112233
-PGPORT=5432
+DATABASE_URL=postgresql://postgres:HZXBiinzHRFOFjObdoKCkoRdkforDUiN@monorail.proxy.rlwy.net:25428/railway
+PGDATABASE=railway
+PGHOST=monorail.proxy.rlwy.net
+PGPASSWORD=HZXBiinzHRFOFjObdoKCkoRdkforDUiN
+PGPORT=25428
 PGUSER=postgres
 
 HOST=localhost
